--- a/Public/index.html
+++ b/Public/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/4e596b9252.js"></script>
+        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -20,7 +20,7 @@
     <body class = "container">
         <div id = "logo"></div>
         <div id = "nav">
-            <a id = "email_link" href="mailto:patrickfoulger@gmail.com"><center><span id ="email_icon"class="fas fa-envelope"></span></center></a>
+            <a id = "email_link" href="mailto:patrickfoulger@gmail.com"><center><span id ="email_icon">Email</span></center></a>
             <div id = "seperator">|</div>
             <a id = "about_link" href="mailto:patrickfoulger@gmail.com"><center><span id="about_icon">About</center></a>    
         </div>
