--- a/Public/index.html
+++ b/Public/index.html
@@ -24,7 +24,7 @@
             <a id = "about_link" href="mailto:patrickfoulger@gmail.com"><center><span id="about_icon">About</center></a>    
         </div>
 
-     <!--   <h2 id = "project_title">Projects</h2>
+        <h2 id = "project_title">Projects</h2>
         <ul id = "projects" >
         <template v-for="(project, index) in projects">
         <button @click="displayModal(index)" :id ='"project_button" + index'>
@@ -55,7 +55,7 @@
         </ul>
 
         <script src = projects.js></script>
-    -->
+
     </body>
     
        
