changed file name

--- a/Public/index.html
+++ b/Public/index.html
@@ -48,7 +48,7 @@
                         <p  v-html="project_display.description" id ="project_description"></p>
                     
                     <button @click="navTo(project_display.link)" id = "checkitout_btn">Check it out</button>
-                    <i @click="hidden = true" class="close fas fa-times"></i></i>
+                    <i @click="hidden = true" ></i>
                 </div>
             </div>
             
