--- a/Public/index.html
+++ b/Public/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
@@ -19,7 +20,7 @@
     <body class = "container">
         <div id = "logo"></div>
         <div id = "nav">
-            <a id = "email_link" href="mailto:patrickfoulger@gmail.com"><center><span id ="email_icon">Email</span></center></a>
+            <a id = "email_link" href="mailto:patrickfoulger@gmail.com"><center><span id ="email_icon"><i class="fa fa-envelope"></i></center></a>
             <div id = "seperator">|</div>
             <a id = "about_link" href="mailto:patrickfoulger@gmail.com"><center><span id="about_icon">About</center></a>    
         </div>
