--- a/Public/index.html
+++ b/Public/index.html
@@ -49,7 +49,7 @@
                         <p  v-html="project_display.description" id ="project_description"></p>
                     
                     <button @click="navTo(project_display.link)" id = "checkitout_btn">Check it out</button>
-                    <i @click="hidden = true" ></i>
+                    <i @click="hidden = true" class = "fa fa-times close"></i>
                 </div>
             </div>
             
